@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-06-03T01:25:47Z",
+  "timestamp" : "2024-06-03T12:37:58Z",
   "count_outdated" : 3846,
   "uniques_outdated" : 681,
-  "count" : 3905,
-  "uniques" : 694,
+  "count" : 3911,
+  "uniques" : 695,
   "views" : [
     {
       "timestamp": "2024-05-21T00:00:00Z",
@@ -64,6 +64,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-03T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
