@@ -1,6 +1,6 @@
 {
-  "count": 59,
-  "uniques": 13,
+  "count": 65,
+  "uniques": 14,
   "views": [
     {
       "timestamp": "2024-05-21T00:00:00Z",
@@ -35,6 +35,11 @@
     {
       "timestamp": "2024-05-31T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-06-03T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
